# minimalOpenGL

./: CMakeLists.txt  cmakeDoc  readme.txt
include/glad/: glad.h
ressources/IBL/Arches_E_PineTree/: Arches_E_PineTree_Iradiance.hdr
shader/: fragLambert.fs  fragLight.fs  frag_PBR_Base.fs  frag_PBR_IBL.fs  frag_PBR_Texture.fs  vertex.vs
src/: OBJ.h  camera.h  context.h  glad.c  main copy  main.cpp  mesh.h  shader.h
